[tool.poetry]
name = "whatdid"
version = "0.1.0"
description = "Lightweight activity tracker"
authors = ["pradyuprasad <pradyu.sp@gmail.com>"]
license = "GNU GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
