[tool.poetry]
name = "whatdid"
version = "0.1.0"
description = "Lightweight activity tracker"
authors = ["pradyuprasad <pradyu.sp@gmail.com>"]
license = "GNU GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyobjc = "^10.3.1"
pydantic = "^2.8.2"
mypy = "^1.10.1"
ruff = "^0.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
